About me page upload

--- a/html/index.html
+++ b/html/index.html
@@ -7,5 +7,54 @@
   </head>
   <body>
       <h1>Twice the Lazy programmer</h1>
+      <div class="navigator">
+
+          <a href="#home">Home</a>
+          <a href="#about">About</a>
+          <a href="#hobbies">Hobbies</a>
+          <a href="#favourite">Favourites</a>
+          <a href="#motivations">Motivations</a>
+          <a href="#contact">Contact</a>
+
+      </div>
+      <div class="container">
+     <div class="primary">
+      <div id="introduction">
+          <h3>Introduction</h3>
+          <p>
+              Hello there! my name is Njabulo Magagula and I'm a former student
+              at the University of the western Cape.<br>
+              This is basically my first webpage and I hope it will inform you more about who the
+              so called lazy programmer is <(^_^)>.
+          </p>
+      </div>
+      <div id="background">
+            <h3>Background</h3>
+            <p>
+                I was born on the 20th of December in 1996 at Witbank polly clinic ,
+                I grew up under my grand mother's supervision.<br>
+                As I grew up , I faced alot of sicknesses and once gave on life due to the countless times I often got sick
+                and worsed of all My granny was too old to do most of the medically required stuff...
+            </p>
+      </div>
+      <div id="academic">
+            <h3>Academic life</h3>
+            <p>
+                My academic background is kinda hectic because I'm one of those kids <br>
+                that would often get caught up in the midst of an arguement between family and relatives
+                and ended up changing school almost every year.
+                <br>
+                I started my grade 1 - 4 in Swaziland and came to South Africa in 2008 around December and the following year
+                I got registered at Nancy Shiba primary school where I did my grade 5 - 7 and progressed to a secondary school
+                which is also located not far from the primary school.
+                I did my grade 8 and the following year went back to swaziland and did my grade 9 then back again to the same school
+                and continued till matric.
+            </p>
+      </div>
+    </div>
+  <div class = "image">
+        <img src="../images/njabulo.jpg" alt="Njabulo's image">
+  </div>
+</div>
   </body>
 </html>
