--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,8 @@
       <h1>Twice the Lazy programmer</h1>
       <div class="navigator">
 
-          <a href="#home">Home</a>
-          <a href="#about">About</a>
+          <a href="index.html" target="_blank">Home</a>
+          <a href="about.html" target="_blank">About</a>
           <a href="#hobbies">Hobbies</a>
           <a href="#favourite">Favourites</a>
           <a href="#motivations">Motivations</a>
@@ -18,43 +18,65 @@
 
       </div>
       <div class="container">
-     <div class="primary">
-      <div id="introduction">
-          <h3>Introduction</h3>
-          <p>
-              Hello there! my name is Njabulo Magagula and I'm a former student
-              at the University of the western Cape.<br>
-              This is basically my first webpage and I hope it will inform you more about who the
-              so called lazy programmer is <(^_^)>.
-          </p>
+            <div class="motivations">
+                 <h3 id="heading" >My Daily motivations</h3>
+                  <p>
+                      That’s what’s cool about working with computers.  They don’t argue, they remember everything, and they don’t drink all your beer.
+                  </p><b>(Paul Leary)</b>
+                  <p>
+                    "The question of whether computers can think is like the question of whether submarines can swim."
+                    <br><b>(Edsger W. Dijkstra)</b>
+                  </p>
+                  <p>
+                      Man is slow , sloppy and intelligent and computers are fast , accurate and stupid
+                      <br><b>Unknown</b>
+                  </p>
+            </div>
+            <div class="goals">
+                <h3 id="heading">My Future goals</h3>
+                <p>
+                    I've always been inspired by various successful people like steve jobs etc
+                    I never had all the resources I have access to now as I grew up and being a computer scientist was
+                    really something I didnt know existed so my dreams that I drafted as I got exposed to the world of knowledge and persistance
+                    <ul>
+                        <li>Full stack web developer</li>
+                        <li>Cyber security researcher</li>
+                        <li>Systems integration engineer</li>
+                    </ul>
+                </p>
+            </div>
+            <!-- <div class="image">
+                  <img src="../images/image2.jpg" alt="Njabulo's image">
+            </div> -->
+            <div class="daily">
+                  <h3 id="heading">Daily life</h3>
+                  <p>
+                      I like quite alot of things in life that have to do with the constantly evolving techology
+                      so this has got me having some sort of a daily routen that I'm looping in.
+                  </p>
+                  <ul>
+                      <li>Do mathematics for computer science</li>
+                      <li>Check on friends</li>
+                      <li>Go tutoring</li>
+                      <li>Study</li>
+                  </ul>
+            </div>
+            <div class="extra-info">
+                  <h3 id="heading">Extra courses I like</h3>
+                  <p>
+                      I'm very much in love with computers as mentioned before and I'm currently doing an online course
+                      in machine learning at <a href="https://ocw.mit.edu" target="_blank">MIT online courses</a> and thus
+                      far it has been a tough journey as I have alot of other stuff aside.
+                      <br>
+                      I have also been into different competitions like
+                      <ul>
+                          <li>Tertiary maths olympiad</li>
+                          <li>Standard bank IT challenge</li>
+                          <li>Hackton</li>
+                          <li>Codechef cookOff</li>
+                      </ul>
+                  </p>
+            </div>
       </div>
-      <div id="background">
-            <h3>Background</h3>
-            <p>
-                I was born on the 20th of December in 1996 at Witbank polly clinic ,
-                I grew up under my grand mother's supervision.<br>
-                As I grew up , I faced alot of sicknesses and once gave on life due to the countless times I often got sick
-                and worsed of all My granny was too old to do most of the medically required stuff...
-            </p>
-      </div>
-      <div id="academic">
-            <h3>Academic life</h3>
-            <p>
-                My academic background is kinda hectic because I'm one of those kids <br>
-                that would often get caught up in the midst of an arguement between family and relatives
-                and ended up changing school almost every year.
-                <br>
-                I started my grade 1 - 4 in Swaziland and came to South Africa in 2008 around December and the following year
-                I got registered at Nancy Shiba primary school where I did my grade 5 - 7 and progressed to a secondary school
-                which is also located not far from the primary school.
-                I did my grade 8 and the following year went back to swaziland and did my grade 9 then back again to the same school
-                and continued till matric.
-            </p>
-      </div>
-    </div>
-  <div class = "image">
-        <img src="../images/njabulo.jpg" alt="Njabulo's image">
-  </div>
-</div>
   </body>
 </html>
