Semi final version of the about me webpage

--- a/html/about.html
+++ b/html/about.html
@@ -9,15 +9,20 @@
 
                 font-family: 'Gloria Hallelujah', cursive;
         }
+        fieldset legend {
+              font-weight: bolder;
+              font-size: 30px ;
+              text-shadow: 3px 2px 3px grey ;
+              color : teal;
+        }
         .container  #heading {
               text-align: center;
               text-shadow: 3px 2px 3px grey ;
               color : teal ;
         }
         .container {
-          width : 70% ;
-          margin-left: 15% ;
-          margin-right: 15% ;
+          width : 80% ;
+
         }
         .container #background-info {
                 width : 100% ;
@@ -31,6 +36,7 @@
       </style>
     </head>
     <body>
+       <fieldset><legend align="center">About myself</legend>
           <div class="container">
               <div id="background-info">
                   <h3 id="heading">Background Information</h3>
@@ -122,5 +128,6 @@
                       </ul>
                   </p>
             </div>
+        </div>
     </body>
   </html>
